# itsn-project

./: readme.md
python-script/: communicator.py  config.py  control_carla.py  ethernet.py  main.py  main_ecu_mock.py  packager.py  pyproject.toml  readme.md
python-script/config/: base.py  cfg.py  data.py  ecus.py
python-script/test/: sample_simulation.py
tcp-receiver/: Cargo.toml  readme.md
tcp-receiver/src/: main.rs
