[project]
name = "python-script"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "carla",
    "scapy>=2.7.0",
    "typed-argument-parser>=1.11.0",
]

[tool.uv.sources]
carla = { path = "carla-pylib/carla-0.9.16-cp312-cp312-manylinux_2_31_x86_64.whl" }

[tool.basedpyright]
reportExplicitAny = false
reportAny = false

